# faiss-rs

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  troubleshooting.md
.github/workflows/: ci.yml
faiss-sys/: .travis.yml  Cargo.toml  build.rs  gen_bindings.sh
faiss-sys/ci/: install_faiss_c.sh
faiss-sys/src/: bindings.rs  bindings_gpu.rs  iobridge.rs  lib.rs
faiss-sys/src/cpp/: iobridge.cpp  iobridge.h
faiss-sys/travis/: install_faiss_c.sh  makefile.inc
src/: arch.rs  cluster.rs  common_variables.rs  error.rs  gpu.rs  index.rs  lib.rs  macros.rs  metric.rs  search_params.rs  selector.rs  utils.rs  vector_transform.rs
src/index/: autotune.rs  flat.rs  gpu.rs  id_map.rs  io.rs  io_flags.rs  ivf.rs  ivf_flat.rs  lsh.rs  mod.rs  pretransform.rs  refine_flat.rs  scalar_quantizer.rs
