[package]
name = "faiss"
description = "High-level bindings for Faiss, the vector similarity search engine"
version = "0.10.1-alpha.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Enet4/faiss-rs"
categories = ["algorithms", "science"]
keywords = ["cbir", "clustering", "index", "similarity"]
readme = "README.md"
edition = "2018"

[features]
gpu = ["faiss-sys/gpu"]

[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
branch = "master"
repository = "Enet4/faiss-rs"

[dependencies.faiss-sys]
version = "0.5.0"
path = "faiss-sys"

[package.metadata.docs.rs]
features = ["gpu"]
