[package]
name = "faiss-sys"
description = "Native bindings for Faiss"
version = "0.6.3-alpha.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/faiss-rs"
links = "faiss_c"
categories = ["external-ffi-bindings", "algorithms"]
keywords = ["cbir", "clustering", "index", "similarity", "bindings"]

[features]
gpu = []
static = ["cmake"]


[build-dependencies]
cmake = {version = "0.1.50",optional = true}

[badges.maintenance]
status = "passively-maintained"

[package.metadata.docs.rs]
features = ["gpu"]
